[package]
name = "plonky2-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
plonky2 = "0.2.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
tokio = "1.37.0"
